postulantes, asesoria, jaf, login, excel

--- a/views/asesoria.html
+++ b/views/asesoria.html
@@ -14,9 +14,9 @@
 <body class="bg-light">
 <div class="container mt-5 login-card">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <img src="sereci.png" alt="Logo Universidad" class="logo-img me-3 modern-alert">
+    <img src="../utils/images/sereci.png" alt="Logo Universidad" class="logo-img me-3 modern-alert">
     <h3>📋 ASESORÍA LEGAL</h3>
-    <a onclick="location.href='index.html'" class="btn btn-sereci-modern">
+    <a onclick="location.href='../index.html'" class="btn btn-sereci-modern">
       <i class="fas"></i> Cerrar Sesión
     </a>
   </div>
@@ -159,6 +159,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 <script src="../js/asesoria.js"></script>
-
 </body>
 </html>
